[gd_scene load_steps=7 format=3 uid="uid://dyjri6mtn6mqa"]

[ext_resource type="Script" uid="uid://djv7jm31e5am5" path="res://Main_Game/1Player/player.gd" id="1_g6ucm"]
[ext_resource type="SpriteFrames" uid="uid://ci0sfvtne1n1r" path="res://Art/sprites/playerSpriteFrames.tres" id="2_g6ucm"]
[ext_resource type="Texture2D" uid="uid://cucn4srbjesxg" path="res://Art/hats/icon.png" id="3_5e17s"]
[ext_resource type="AudioStream" uid="uid://dlccqkfe65a6p" path="res://Art/sound/sfx/jump.wav" id="12_0nq3h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gragq"]
size = Vector2(106.667, 106.667)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_boqdv"]
size = Vector2(33, 33)

[node name="Player" type="CharacterBody2D"]
scale = Vector2(2, 2)
script = ExtResource("1_g6ucm")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(4.76837e-07, 4.76837e-07)
sprite_frames = ExtResource("2_g6ucm")
animation = &"Idle"

[node name="Level Display" type="Label" parent="."]
offset_left = -64.0
offset_top = -56.0
offset_right = 192.0
offset_bottom = -8.0
scale = Vector2(0.5, 0.5)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 20
text = "Level 10 Crook"
horizontal_alignment = 1
vertical_alignment = 2
autowrap_mode = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2.38419e-07, 2.38419e-07)
scale = Vector2(0.3, 0.3)
shape = SubResource("RectangleShape2D_gragq")

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("RectangleShape2D_boqdv")
debug_color = Color(0.699314, 0.277037, 1, 0.42)

[node name="Hat" type="Sprite2D" parent="."]
position = Vector2(0, -16)
scale = Vector2(0.25, 0.25)
texture = ExtResource("3_5e17s")
offset = Vector2(0, -16)

[node name="SFX" type="Node" parent="."]

[node name="Jump" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("12_0nq3h")

[node name="Col_det" type="RayCast2D" parent="."]
position = Vector2(0, 16.5)
target_position = Vector2(25, 0)

[connection signal="animation_finished" from="Sprite" to="." method="_on_sprite_animation_finished"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_area_2d_body_entered"]
